[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/items/undefined_1.png" type="Texture" id=1]
[ext_resource path="res://addons/laec-is-you/entity/Item.gd" type="Script" id=2]
[ext_resource path="res://sprites/items/undefined_0.png" type="Texture" id=3]
[ext_resource path="res://sprites/items/undefined_2.png" type="Texture" id=4]
[ext_resource path="res://sprites/gui/ignored_2.png" type="Texture" id=5]
[ext_resource path="res://sprites/gui/ignored_0.png" type="Texture" id=6]
[ext_resource path="res://sprites/gui/ignored_1.png" type="Texture" id=7]
[ext_resource path="res://effects/WinParticles.tscn" type="PackedScene" id=8]
[ext_resource path="res://effects/MoveParticles.tscn" type="PackedScene" id=9]
[ext_resource path="res://effects/Spiro01Particles.tscn" type="PackedScene" id=10]
[ext_resource path="res://effects/VolatileParticles.gd" type="Script" id=11]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "top_left_0",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "bottom_left_0",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "top_right_0",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "left_0",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "right_0",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "bottom_right_0",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Undefined" type="Node2D"]
script = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -1, -1, 2, 2 )
__meta__ = {
"_editor_description_": "Useful in the ingame editor, for example; to remove items th	at somehow go off-screen.
Use Item.is_on_screen()"
}

[node name="WinParticles" parent="." instance=ExtResource( 8 )]

[node name="MoveParticles1" parent="." instance=ExtResource( 9 )]

[node name="MoveParticles2" parent="." instance=ExtResource( 9 )]

[node name="MoveParticles3" parent="." instance=ExtResource( 9 )]

[node name="MoveParticles4" parent="." instance=ExtResource( 9 )]

[node name="MoveParticles5" parent="." instance=ExtResource( 9 )]

[node name="MoveParticles6" parent="." instance=ExtResource( 9 )]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "right_0"
playing = true

[node name="DestructionParticles" parent="." instance=ExtResource( 10 )]
script = ExtResource( 11 )

[node name="IgnoredAnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
self_modulate = Color( 0.760784, 0.254902, 0.254902, 1 )
frames = SubResource( 2 )
frame = 2
playing = true

[node name="Tween" type="Tween" parent="."]
