[gd_scene load_steps=4 format=2]

[ext_resource path="res://core/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/laec-is-you/entity/Item.gd" type="Script" id=2]
[ext_resource path="res://core/Item.tscn" type="PackedScene" id=3]

[node name="52FrontalCollision" instance=ExtResource( 1 )]
title = "level.52.FrontalCollision.title"
excerpt = "level.52.FrontalCollision.excerpt"
link = "level.52.FrontalCollision.link"

[node name="HexagonalTileMap" parent="." index="2"]
cell_custom_transform = Transform2D( 64, 0, 0, 45.449, -32, -22.7245 )
tile_data = PoolIntArray( 0, 4, 0 )

[node name="MiniDecorFarTileMap" parent="." index="3"]
cell_custom_transform = Transform2D( 16, 0, 0, 11.3623, -8, -5.68113 )

[node name="DecorTileMap" parent="." index="4"]
cell_custom_transform = Transform2D( 8, 0, 0, 5.68113, -4, -2.84056 )

[node name="MiniDecorNearTileMap" parent="." index="5"]
cell_custom_transform = Transform2D( 16, 0, 0, 11.3623, -8, -5.68113 )

[node name="LoveText" type="Node2D" parent="Items" index="0" instance=ExtResource( 3 )]
modulate = Color( 0.9, 0.9, 0.9, 0.7 )
position = Vector2( 0, -7.57484 )
script = ExtResource( 2 )
is_text = true
concept_name = "love"
is_lit = false
